# pjsua2-python-1

./: README.md  pyproject.toml  setup.cfg
.github/workflows/: build-wheels.yml
scripts/: build_pjproject_linux.sh  build_pjproject_windows.ps1
src/pjsua2_python/: __init__.py
