[build-system]
requires = ["setuptools", "wheel", "cibuildwheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pjsua2-python"
version = "2.17.0"
description = "Python bindings for PJSUA2 (PJSIP 2.17)"
requires-python = ">=3.10"
authors = [{ name = "Your Name", email = "you@example.com" }]
license = { text = "BSD-2-Clause" }

[tool.cibuildwheel]
build = "cp310-*"
skip = "cp310-musllinux*"

[tool.cibuildwheel.linux]
before-build = "bash scripts/build_pjproject_linux.sh"
archs = ["x86_64", "i686", "aarch64", "ppc64le", "s390x", "armv7l", "riscv64"]
manylinux-x86_64-image = "manylinux2014"
manylinux-i686-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
manylinux-ppc64le-image = "manylinux2014"
manylinux-s390x-image = "manylinux2014"
manylinux-armv7l-image = "manylinux_2_31"
manylinux-riscv64-image = "manylinux_2_39"

[tool.cibuildwheel.windows]
archs = ["AMD64"]
